--- a/src/index.css
+++ b/src/index.css
@@ -135,10 +135,6 @@ section {
     cursor: default;
 }
 
-.pageBottom {
-    margin-bottom: 150px;
-}
-
 .glowBox {
     border-radius: 10px;
     padding: 20px;
@@ -158,10 +154,13 @@ section {
     border-bottom: 1px solid white;
     box-shadow: 0px 0px 10px white;
     padding: 5px;
+    margin-top: 110px;
     margin-bottom: 100px;
     background: rgba(21, 21, 133, 0.75) !important;
     margin-left: 3px;
     margin-right: 3px;
+    display: inline-block;
+    width: 100%;
 }
 
 .portfolio-card {
@@ -195,6 +194,11 @@ section {
 
 .card-footer a:last-child {
     float: right;
+}
+
+.pageBottom {
+    margin-bottom: 150px;
+    display: inline-block !important;
 }
 
 a.card-text {
